crates/fixtures/tests/snapshots/hostile__emphasis_overlap.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      47
    ],
    [
      2,
      7
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 36
          },
          "preview": "é office אבג ​ zero invisible",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 132628,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "underline": {
                "offset": 563,
                "thickness": 563
              },
              "range": {
                "start": 0,
                "end": 3
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 5745
            },
            {
              "color": [
                160,
                20,
                80,
                0
              ],
              "underline": {
                "offset": 563,
                "thickness": 563
              },
              "strike": {
                "offset": -3210,
                "thickness": 563
              },
              "range": {
                "start": 3,
                "end": 11
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 5745,
              "width": 33039
            },
            {
              "color": [
                160,
                20,
                80,
                0
              ],
              "underline": {
                "offset": 563,
                "thickness": 563
              },
              "strike": {
                "offset": -3210,
                "thickness": 563
              },
              "range": {
                "start": 11,
                "end": 17
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 1,
              "x": 38784,
              "width": 21627
            },
            {
              "color": [
                160,
                20,
                80,
                0
              ],
              "underline": {
                "offset": 563,
                "thickness": 563
              },
              "strike": {
                "offset": -3210,
                "thickness": 563
              },
              "range": {
                "start": 17,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 60411,
              "width": 5250
            },
            {
              "color": [
                160,
                20,
                80,
                0
              ],
              "underline": {
                "offset": 563,
                "thickness": 563
              },
              "strike": {
                "offset": -3210,
                "thickness": 563
              },
              "range": {
                "start": 22,
                "end": 36
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 65661,
              "width": 66967
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "font.nearest",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "requested Descriptors { weight: 700, style: Normal, stretch: 1000 } in serif; used Descriptors { weight: 400, style: Normal, stretch: 1000 }",
      "bytes": {
        "start": 0,
        "end": 3
      }
    },
    {
      "severity": "warning",
      "code": "font.nearest",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "requested Descriptors { weight: 700, style: Italic, stretch: 1000 } in serif; used Descriptors { weight: 400, style: Normal, stretch: 1000 }",
      "bytes": {
        "start": 3,
        "end": 4
      }
    },
    {
      "severity": "warning",
      "code": "font.missing",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "no face covers this grapheme; shaped with the generic default and .notdef",
      "bytes": {
        "start": 11,
        "end": 17
      }
    }
  ]
}
