crates/fixtures/tests/snapshots/hostile__float_wider_than_frame.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      45
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "14@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 12
          },
          "preview": "Anchor text.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 56718,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 12
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 56718
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "44@1",
      "schema": "reprise.float",
      "owner": "30@1",
      "status": "valid",
      "applied": false,
      "targets": [
        {
          "role": "anchor",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "14@1",
              "bytes": {
                "start": 1,
                "end": 2
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "error",
      "code": "layout.float-unplaceable",
      "subject": {
        "kind": "relation",
        "id": "44@1"
      },
      "message": "float fits no available frame within one fresh template cycle; owner omitted",
      "bytes": null
    }
  ]
}
